software/platform/resources/manifests/kubeflow.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubeflow-vs
  namespace: kubeflow
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/mlops-gateway
  http:
  - match:
    - uri:
        exact: /pipeline
    redirect:
      uri: /pipeline/
  - match:
      - uri:
          prefix: /pipeline/
    rewrite:
        uri: "/"
    route:
    - destination:
        host: ml-pipeline-ui.kubeflow.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /ml_metadata
    route:
    - destination:
        host: metadata-envoy-service.kubeflow.svc.cluster.local
        port:
          number: 9090
    headers:
      request:
        set:
          Host: metadata-envoy-service.kubeflow.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-vs
  namespace: kubeflow
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/mlops-gateway
  http:
  - match:
    - uri:
        prefix: "/minio"
    route:
    - destination:
        host: minio-service.kubeflow.svc.cluster.local 
        port:
          number: 9000
