software/platform/resources/manifests/monitoring.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/mlops-gateway
  http:
  - match:
      - uri:
          prefix: "/grafana"
    route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/mlops-gateway
  http:
  - match:
      - uri:
          prefix: "/prometheus"
    route:
    - destination:
        host: prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
